# note-outline

./: .gitignore  README.md  setup.cfg
sample/: 202211250910 First Note.md  202211251045 Second Note.md  202211251152 Third Note.md  202211251217 Outline.md
src/note_outline/: cli.py  file_io.py  main.py  note_manipulation.py
test/: test_file_io.py
