[metadata]
name = note_outline
version = 0.0.1
author = Harley Wilson
author_email = hi@harleyjwilson.com
description = A tool to compile an outline from notes in your zettelkasten. 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/harleyjwilson/note_outline
project_urls = 
    Bug Tracker = https://github.com/harleyjwilson/note_outline/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    note_outline = src.note_outline.main:main